<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    tools:context=".logIn">

    <RelativeLayout
        android:id="@+id/gradient"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent">

        <EditText
            android:id="@+id/uEmail"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="239dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="146dp"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/uPassword"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="213dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="textStart"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnLog"
            android:layout_width="236dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="42dp"
            android:background="@color/fui_transparent"
            android:fontFamily="@font/quicksandmedium"
            android:text="@string/log_in"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnLog"
            android:layout_marginTop="-42dp"
            android:layout_toStartOf="@+id/btnSign"
            android:text="@string/first_time" />

        <Button
            android:id="@+id/btnSign"
            android:layout_width="68dp"
            android:layout_height="20dp"
            android:layout_alignEnd="@+id/btnLog"
            android:layout_below="@+id/btnLog"
            android:layout_marginTop="-42dp"
            android:background="@color/fui_transparent"
            android:fontFamily="@font/quicksandmedium"
            android:text="@string/sign_up"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />

    </RelativeLayout>

</LinearLayout>